Fix project description font-size
Was overlapping the project container on xl screens

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1542,7 +1542,9 @@
 	h4 {
 		margin: 0 0 (_size(element-margin) * 0.1) 0;
 	}
-
+	p {
+		font-size: 16px;
+	}
 }
 
 @media only screen and (max-width: 720px) {
